      work to determine which packages are required.  (Closes: #593832)
    + [RA] Remove versions from dependencies when those versions are
      satisifed by stable (lenny).
    + [NT] Bump debhelper build dependency to 7.0.50~, since some tests
      depend on using dh7 with override targets.  (Closes: #607730)
    + [NT] Added Niels Thykier to uploaders.
  * debian/copyright:
    + [NT] Added Niels Thykier to maintainers.
  * debian/rules:
    + [RA] Run the test suite during the package build.
    + [NT] Replace dh_clean -k with dh_prep.
    + [NT] Add support for skipping the test suite per policy 4.9.1.
      Many thanks to David Bremner for the patch.
  * debian/compat:
    + [NT] Bump debhelper comat to 7.

  * lib/Lintian/Collect/Binary.pm:
    + [NT] Pre-sort file index and file info to avoid sorting it
      repeatedly in the checks.  (Closes: #605844)

  * t/tests/{rules-not-makefile,scripts-missing-dep}:
    + [NT] Added new tests. (Closes: #607731)

 -- Raphael Geissert <geissert@debian.org>  Thu, 29 Jul 2010 21:09:55 -0400

lintian (2.4.3) unstable; urgency=low

  The "Policy 3.9.1" release.

  * Summary of tag changes:
    + Added:
      - embedded-library
    + Removed:
      - debian-news-entry-without-blank-line
      - dh_testversion-is-deprecated

  * checks/binaries{,.desc}:
    + [RG] Detect embedded copies of expat, libbz2, libmagic, libxml2,
      pcre3, and tiff.
    + [RG] Recognise powerpcspe and sh4 ELF objects.
    + [RA] Warn that spelling-error-in-binary may produce false positives
      for words containing non-ASCII characters.  (See #588661)
  * checks/changelog-file{,.desc}:
    + [RA] apt-listchanges has been fixed, so drop the check for NEWS
      files ending in a trailing blank line.  (Closes: #586816)
  * checks/control-files.desc:
    + [RA] Add references to Policy requirements added in 3.9.1.
  * checks/copyright-file{,.desc}:
    + [RA] Add examples for copyright-without-copyright-notice.  Based on