@@ -21,6 +21,7 @@ Build-Depends: binutils,
                libapt-pkg-perl,
                libclass-accessor-perl,
                libdigest-sha-perl,
+               libemail-valid-perl,
                libipc-run-perl,
                libparse-debianchangelog-perl,
                libtest-minimumversion-perl,
@@ -52,6 +53,7 @@ Depends: ${misc:Depends},
          libapt-pkg-perl,
          libclass-accessor-perl,
          libdigest-sha-perl,
+         libemail-valid-perl,
          libipc-run-perl,
          libparse-debianchangelog-perl,
          libtimedate-perl,
