@@ -3,7 +3,9 @@ Priority: extra
 Section: {$section}
 Maintainer: <lintian-maint@debian.org>
 Uploaders: <lintian-maint@debian.org>, Russ Allbery <rra@debian.org>,
- Russ Allbery <rra@debian.org>
+ Russ Allbery <rra@debian.org>,
+ Mr. Missing Comma <mrmc@comma.com>
+ Mrs. Missing Comma <mrsmc@comma.com>
 Standards-Version: {$standards_version}
 Build-Depends: debhelper (>= 7)
 
