@@ -1,4 +1,5 @@
 E: fields-maintainer-general source: maintainer-name-missing <lintian-maint@debian.org>
+E: fields-maintainer-general source: uploader-address-malformed Mr. Missing Comma <mrmc@comma.com> Mrs. Missing Comma <mrsmc@comma.com>
 E: fields-maintainer-general source: uploader-name-missing <lintian-maint@debian.org>
 E: fields-maintainer-general: maintainer-name-missing <lintian-maint@debian.org>
 W: fields-maintainer-general source: changelog-should-mention-nmu
