@@ -80,6 +80,7 @@ lintian (2.4.4) UNRELEASED; urgency=low
     + [NT] Bump debhelper build dependency to 7.0.50~, since some tests
       depend on using dh7 with override targets.  (Closes: #607730)
     + [NT] Added Niels Thykier to uploaders.
+    + [NT] Introduce (build) dependency on libemail-valid-perl.
   * debian/copyright:
     + [NT] Added Niels Thykier to maintainers.
   * debian/rules:
@@ -90,6 +91,9 @@ lintian (2.4.4) UNRELEASED; urgency=low
   * debian/compat:
     + [NT] Bump debhelper comat to 7.
 
+  * lib/Lintian/Check.pm:
+    + [NT] Use Email::Valid to validate email addreses.
+      (Closes: #602655)
   * lib/Lintian/Collect/Binary.pm:
     + [NT] Pre-sort file index and file info to avoid sorting it
       repeatedly in the checks.  (Closes: #605844)
